# DeepShield

./: README.md  pyproject.toml
deepshield/: test.ipynb  train.py  ui_gradio.py
deepshield/dataset/: vhd11k.py
