[project]
name = "hackathon"
version = "0.1.0"
description = ""
authors = [
    {name = "Nima Hashemi",email = "nima.hashemi.edu@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fiftyone (>=1.3.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
