[project]
name = "hackathon"
version = "0.1.0"
description = ""
authors = [
    {name = "Nima Hashemi",email = "nima.hashemi.edu@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fiftyone (>=1.3.2,<2.0.0)",
    "torch (>=2.6.0,<3.0.0)",
    "torchvision (>=0.21.0,<0.22.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "transformers (>=4.49.0,<5.0.0)",
    "datasets (>=3.4.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
